--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Header -->
     <header id="header">
         <h1 class="site-title">
-            <a href="#">My Personal Blog</a>
+            <a href="#">My Blog</a>
         </h1>
         <nav>
             <ul>
@@ -25,6 +25,7 @@
                     <a href="https://github.com/Shintaro060776/page">Works</a>
                     <a href="#news">News</a>
                     <a href="#contact">contact</a>
+                    <a href="#contact">Blog</a>
                 </li>
             </ul>
         </nav>
