--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans+JP&display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c&display=swap">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Shintaro Hashimoto Personal Blog</title>
 </head>
 
@@ -22,7 +25,7 @@
             <ul>
                 <li>
                     <a href="#about">About</a>
-                    <a href="https://github.com/Shintaro060776/page">Works</a>
+                    <a href="#works">Works</a>
                     <a href="#news">News</a>
                     <a href="#contact">contact</a>
                     <a href="#contact">Blog</a>
@@ -49,6 +52,53 @@
         </p>
     </section>
 
+    <!-- Works -->
+    <section id="works" class="works">
+        <div class="title">
+            <h2>Works</h2>
+        </div>
+    </section>
+
+    <div class="box">
+        <div class="card">
+            <i class="fa-brands fa-github"></i>
+            <h5>Github</h5>
+            <div class="paragraph">
+                <p>
+                    随時Updateするようにします
+                </p>
+                <p style="text-align: center;">
+                    <a href="https://github.com/Shintaro060776" class="button">もっと読む</a>
+                </p>
+            </div>
+        </div>
+        <div class="card">
+            <i class="fa-brands fa-x-twitter"></i>
+            <h5>Twitter(X)</h5>
+            <div class="paragraph">
+                <p>
+                    随時Updateするようにします
+                </p>
+                <p style="text-align: center;">
+                    <a href="https://twitter.com/eden198611" class="button">もっと読む</a>
+                </p>
+            </div>
+        </div>
+        <div class="card">
+            <i class="fa-brands fa-instagram"></i>
+            <h5>Instagram</h5>
+            <div class="paragraph">
+                <p>
+                    随時Updateするようにします
+                </p>
+                <p style="text-align: center;">
+                    <a href="https://www.instagram.com/shintaro20090317_2/" class="button">もっと読む</a>
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <!-- News -->
     <section id="news" class="wrapper">
         <h2 class="sec-title">News</h2>
         <dl>
@@ -57,6 +107,7 @@
         </dl>
     </section>
 
+    <!-- Contact -->
     <section id="contact" class="wrapper">
         <h2 class="sec-title">contact</h2>
         <form action="sendmail.php" method="post">
