--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     随時Updateするようにします
                 </p>
                 <p style="text-align: center;">
-                    <a href="https://twitter.com/eden198611" class="button">もっと読む</a>
+                    <a href="# class=" button">もっと読む</a>
                 </p>
             </div>
         </div>
@@ -92,7 +92,7 @@
                     随時Updateするようにします
                 </p>
                 <p style="text-align: center;">
-                    <a href="https://www.instagram.com/shintaro20090317_2/" class="button">もっと読む</a>
+                    <a href="#" class="button">もっと読む</a>
                 </p>
             </div>
         </div>
