--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     随時Updateするようにします
                 </p>
                 <p style="text-align: center;">
-                    <a href="# class=" button">もっと読む</a>
+                    <a href="#" class="button">もっと読む</a>
                 </p>
             </div>
         </div>
