--- a/index.html
+++ b/index.html
@@ -113,11 +113,13 @@
         <form action="sendmail.php" method="post">
             <dl>
                 <dt><label for="name">お名前</label></dt>
-                <dd><input type="text" id="name"></dd>
+                <dd><input type="text" id="name" name="name"></dd>
+
                 <dt><label for="email">メールアドレス</label></dt>
-                <dd><input type="email" id="email"></dd>
+                <dd><input type="email" id="email" name="email"></dd>
+
                 <dt><label for="content">お問い合わせ内容</label></dt>
-                <dd><textarea name="" id="content" cols="30" rows="10"></textarea></dd>
+                <dd><textarea name="content" id="content" cols="30" rows="10"></textarea></dd>
             </dl>
             <div class="button"><input type="submit" value="送信"></div>
         </form>
