--- a/index.html
+++ b/index.html
@@ -104,6 +104,8 @@
         <dl>
             <dt>2023/09/24</dt>
             <dd>本ブログをリリースしました</dd>
+            <dt>2023/09/27</dt>
+            <dd>メール機能実装完了/Blog機能の開発に着手</dd>
         </dl>
     </section>
 
