--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <a href="#works">Works</a>
                     <a href="#news">News</a>
                     <a href="#contact">contact</a>
-                    <a href="./blog/blog.html">Blog(現在実装中)</a>
+                    <a href="./blog/blog-app/public/index.html">Blog(現在実装中)</a>
                 </li>
             </ul>
         </nav>
