--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Header -->
     <header id="header">
         <h1 class="site-title">
-            <a href="#">Blog</a>
+            <a href="#">Neila</a>
         </h1>
         <nav>
             <ul>
