--- a/index.html
+++ b/index.html
@@ -125,6 +125,32 @@
         </form>
     </section>
 
+    <section class="wrapper">
+        <h2 class="sec-title">このWebページの技術スタック</h2>
+        <table>
+            <tr>
+                <th>バックエンド</th>
+                <td>PHP</td>
+            </tr>
+            <tr>
+                <th>フロントエンド</th>
+                <td>HTML, CSS, Javascript, React</td>
+            </tr>
+            <tr>
+                <th>データベース</th>
+                <td>RDS</td>
+            </tr>
+            <tr>
+                <th>環境／クラウド</th>
+                <td>AWS(VPC, EC2, SES, IAM, API Gateway, Lambda)</td>
+            </tr>
+            <tr>
+                <th>ツール／その他</th>
+                <td>CI/CD(Github Actions)、Terraform、Docker</td>
+            </tr>
+        </table>
+    </section>
+
 </body>
 
 
