--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <table>
             <tr>
                 <th>バックエンド</th>
-                <td>PHP</td>
+                <td>PHP、Nodejs</td>
             </tr>
             <tr>
                 <th>フロントエンド</th>
