--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             </tr>
             <tr>
                 <th>データベース</th>
-                <td>RDS</td>
+                <td>DynamoDB</td>
             </tr>
             <tr>
                 <th>環境／クラウド</th>
