--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     随時Updateするようにします
                 </p>
                 <p style="text-align: center;">
-                    <a href="https://www.instagram.com/neila19861111" class="button">もっと読む</a>
+                    <a href="#" class="button">もっと読む</a>
                 </p>
             </div>
         </div>
