--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             </tr>
             <tr>
                 <th>環境／クラウド</th>
-                <td>AWS(VPC, EC2, SES, IAM, API Gateway, Lambda)</td>
+                <td>AWS(VPC, EC2, SES, IAM, API Gateway, Lambda、Cloudwatch)</td>
             </tr>
             <tr>
                 <th>ツール／その他</th>
