--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Header -->
     <header id="header">
         <h1 class="site-title">
-            <a href="#">Neila</a>
+            <a href="#">Ineia</a>
         </h1>
         <nav>
             <ul>
@@ -28,7 +28,7 @@
                     <a href="#works">Works</a>
                     <a href="#news">News</a>
                     <a href="#contact">contact</a>
-                    <a href="/blog/">Blog(現在実装中)</a>
+                    <a href="/blog/">Bulletin Board(現在実装中)</a>
                 </li>
             </ul>
         </nav>
