--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             </tr>
             <tr>
                 <th>ツール／その他</th>
-                <td>CI/CD(Github Actions)、Terraform、Docker</td>
+                <td>CI/CD(Github Actions)、Terraform、Docker、Shell Script</td>
             </tr>
         </table>
     </section>
