--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Personal Blog">
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-G9T36V7EPX"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-G9T36V7EPX');
+    </script>
     <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css" />
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans+JP&display=swap">
@@ -105,7 +113,7 @@
             <dt>2023/09/24</dt>
             <dd>本ブログをリリースしました</dd>
             <dt>2023/09/27</dt>
-            <dd>メール機能実装完了/Blog機能の開発に着手</dd>
+            <dd>メール機能実装完了/Bulletin Board機能の開発に着手</dd>
         </dl>
     </section>
 
