--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
                 <td>CI/CD(Github Actions)、Terraform、Docker、Shell Script</td>
             </tr>
         </table>
+        <img src="system.png" alt="システムの画像">
     </section>
 
 </body>
