--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
                     <a href="#works">Works</a>
                     <a href="#news">News</a>
                     <a href="#contact">contact</a>
-                    <a href="/blog/">Bulletin Board(現在実装中)</a>
+                    <a href="/blog/">Bulletin Board</a>
+                    <a href="./sd/stablediffusion.html">Generate Image(Stable Diffusion)(現在実装中)</a>
                 </li>
             </ul>
         </nav>
@@ -111,9 +112,13 @@
         <h2 class="sec-title">News</h2>
         <dl>
             <dt>2023/09/24</dt>
-            <dd>本ブログをリリースしました</dd>
+            <dd>本Webページをリリースしました</dd>
             <dt>2023/09/27</dt>
             <dd>メール機能実装完了/Bulletin Board機能の開発に着手</dd>
+            <dt>2023/09/30</dt>
+            <dd>Bulletin Board機能の実装完了</dd>
+            <dt>2023/10/03</dt>
+            <dd>Generate Image(Stable Diffusion)機能の開発に着手</dd>
         </dl>
     </section>
 
