--- a/sd/stablediffusion.html
+++ b/sd/stablediffusion.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="stablediffusion.css">
     <title>Document</title>
 </head>
 
 <body>
-    <h1>開発中</h1>
+    <h1>Implementing...</h1>
 </body>
 
 </html>
