--- a/sd/stablediffusion.html
+++ b/sd/stablediffusion.html
@@ -16,7 +16,7 @@
         <h2>Now Loading...</h2>
     </div>
 
-    <div>
+    <div class="content">
         <h1>Implementing...</h1>
     </div>
 
