--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         <table>
             <tr>
                 <th>バックエンド</th>
-                <td>PHP、Nodejs</td>
+                <td>PHP、Nodejs、Python</td>
             </tr>
             <tr>
                 <th>フロントエンド</th>
