--- a/sd/stablediffusion.html
+++ b/sd/stablediffusion.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stablediffusion.css">
-    <title>Document</title>
+    <title>Generate Image(Stable Diffusion)</title>
 </head>
 
 <body>
@@ -18,6 +18,11 @@
 
     <div class="content">
         <h3>Implementing...</h3>
+        <div class="image-generate-form">
+            <textarea cols="50" rows="5" placeholder="画像のイメージを入力してください"></textarea>
+            <br>
+            <button id="generateImage">Ask Stable Diffusion</button>
+        </div>
     </div>
 
     <script>
