--- a/sd/stablediffusion.html
+++ b/sd/stablediffusion.html
@@ -25,6 +25,10 @@
         </div>
     </div>
 
+    <div class="generated-image-container">
+        <img src="./out/v1_txt2img_o.png" alt="Generated Image">
+    </div>
+
     <script>
         window.onload = function () {
             setTimeout(() => {
