--- a/sd/stablediffusion.html
+++ b/sd/stablediffusion.html
@@ -23,7 +23,7 @@
             <button id="generateImage">Ask Stable Diffusion</button>
             <h5><a href="../index.html">トップページに戻る</a></h5>
             <div class="generated-image-container">
-                <img src="./out/v1_txt2img_o.png" alt="Generated Image">
+                <img src="./out/v1_txt2img_0.png" alt="Generated Image">
             </div>
         </div>
     </div>
