--- a/sd/stablediffusion.html
+++ b/sd/stablediffusion.html
@@ -51,7 +51,12 @@
                 body: JSON.stringify({ input_text: input_text })
             })
                 .then(response => response.json())
-                .then(data => alert(data.message))
+                .then(data => {
+                    alert(data.message);
+                    if (data.imagePaths && data.imagePaths.length > 0) {
+                        document.querySelector(".generated-image-container img").src = data.imagePaths[0];
+                    }
+                })
                 .catch((error) => {
                     console.error('Error:', error);
                 });
