--- a/sd/stablediffusion.html
+++ b/sd/stablediffusion.html
@@ -43,7 +43,7 @@
     <script>
         document.getElementById("generateImage").addEventListener("click", function () {
             let input_text = document.querySelector("textarea").value;
-            fetch('https://7bnaf93gxl.execute-api.ap-northeast-1.amazonaws.com/production', {
+            fetch('https://kmpjtsz7xl.execute-api.ap-northeast-1.amazonaws.com/dev', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
