--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
             </tr>
         </table>
         <img src="system.png" alt="システムの画像">
+        <img src="system2.png" alt="システムの画像">
     </section>
 
 </body>
