--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             </tr>
             <tr>
                 <th>環境／クラウド</th>
-                <td>AWS(VPC, EC2, SES, IAM, API Gateway, Lambda、Cloudwatch)</td>
+                <td>AWS(VPC, EC2, SES, IAM, API Gateway, Lambda、Cloudwatch、S3)</td>
             </tr>
             <tr>
                 <th>ツール／その他</th>
