--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <a href="#news">News</a>
                     <a href="#contact">contact</a>
                     <a href="/blog/">Bulletin Board</a>
-                    <a href="./sd/stablediffusion.html">Generate Image(Stable Diffusion)(現在実装中)</a>
+                    <a href="./sd/stablediffusion.html">Generate Image(Stable Diffusion)</a>
                 </li>
             </ul>
         </nav>
@@ -119,6 +119,8 @@
             <dd>Bulletin Board機能の実装完了</dd>
             <dt>2023/10/03</dt>
             <dd>Generate Image(Stable Diffusion)機能の開発に着手</dd>
+            <dt>2023/10/05</dt>
+            <dd>Generate Image(Stable Diffusion)機能の実装完了</dd>
         </dl>
     </section>
 
