--- a/sd/stablediffusion.html
+++ b/sd/stablediffusion.html
@@ -9,6 +9,10 @@
 </head>
 
 <body>
+    <video id="background-video" loop muted autoplay>
+        <source src="new_3.mp4" type="video/mp4">
+    </video>
+
     <div class="loader">
         <span></span>
         <span></span>
