--- a/sd/stablediffusion.html
+++ b/sd/stablediffusion.html
@@ -10,7 +10,7 @@
 
 <body>
     <video id="background-video" loop muted autoplay>
-        <source src="new_3.mp4" type="video/mp4">
+        <source src="Comp_11.mp4" type="video/mp4">
     </video>
 
     <div class="loader">
