--- a/sd/stablediffusion.html
+++ b/sd/stablediffusion.html
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-    <video id="background-video" loop muted autoplay>
+    <!-- <video id="background-video" loop muted autoplay>
         <source src="Comp_11.mp4" type="video/mp4">
-    </video>
+    </video> -->
 
     <div class="loader">
         <span></span>
