--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                     <a href="#contact">contact</a>
                     <a href="/blog/">Bulletin Board</a>
                     <a href="./sd/stablediffusion.html">Generate Image(Stable Diffusion)</a>
+                    <a href="./cattoon/cartoon.html">Animation Style Conversion(実装中)</a>
                 </li>
             </ul>
         </nav>
@@ -121,6 +122,8 @@
             <dd>Generate Image(Stable Diffusion)機能の開発に着手</dd>
             <dt>2023/09/29</dt>
             <dd>Generate Image(Stable Diffusion)機能の実装完了</dd>
+            <dt>2023/10/07</dt>
+            <dd>Animation Style Conversion機能の開発に着手</dd>
         </dl>
     </section>
 
