--- a/cattoon/cartoon.html
+++ b/cattoon/cartoon.html
@@ -10,6 +10,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Inconsolata&family=M+PLUS+Rounded+1c:wght@700&family=Poppins:wght@300&family=Raleway:ital,wght@1,300&family=Roboto&family=Roboto+Condensed&family=Roboto+Mono:ital,wght@0,600;1,400&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="cartoon.css">
 </head>
 
 <body>
