--- a/sd/stablediffusion.html
+++ b/sd/stablediffusion.html
@@ -22,7 +22,7 @@
 
     <div class="content">
         <div class="image-generate-form">
-            <textarea cols="50" rows="5" placeholder="画像のイメージを入力してください"></textarea>
+            <textarea cols="50" rows="5" placeholder="英語で複数の画像イメージを入力してください(単語間は、『,』で区切ってください)"></textarea>
             <br>
             <button id="generateImage">Ask Stable Diffusion</button>
             <h5><a href="../index.html">トップページに戻る</a></h5>
