--- a/cattoon/cartoon.html
+++ b/cattoon/cartoon.html
@@ -10,6 +10,11 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Inconsolata&family=M+PLUS+Rounded+1c:wght@700&family=Poppins:wght@300&family=Raleway:ital,wght@1,300&family=Roboto&family=Roboto+Condensed&family=Roboto+Mono:ital,wght@0,600;1,400&display=swap"
         rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inconsolata&family=M+PLUS+Rounded+1c:wght@700&family=Noto+Sans+JP:wght@600&family=Poppins:wght@300&family=Raleway:ital,wght@1,300&family=Roboto&family=Roboto+Condensed&family=Roboto+Mono:ital,wght@0,600;1,400&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="cartoon.css">
 </head>
 
