--- a/cattoon/cartoon.html
+++ b/cattoon/cartoon.html
@@ -70,6 +70,7 @@
 
             fetch('https://lzeeniah1j.execute-api.ap-northeast-1.amazonaws.com', {
                 method: 'POST',
+                mode: 'no-cors',
                 headers: {
                     'APIKEY': '3db2614196984c1b84d78a608808cb28'
                 },
