--- a/cattoon/cartoon.html
+++ b/cattoon/cartoon.html
@@ -68,7 +68,7 @@
 
             formData.append('file', file);
 
-            fetch('https://lzeeniah1j.execute-api.ap-northeast-1.amazonaws.com', {
+            fetch('https://lzeeniah1j.execute-api.ap-northeast-1.amazonaws.com/convert', {
                 method: 'POST',
                 mode: 'no-cors',
                 headers: {
