--- a/cattoon/cartoon.html
+++ b/cattoon/cartoon.html
@@ -64,26 +64,33 @@
         function convertToAnimation() {
             const animatedImage = document.getElementById('animatedImage');
             const file = fileInput.files[0]
-            const formData = new FormData();
 
-            formData.append('file', file);
-
-            fetch('https://lzeeniah1j.execute-api.ap-northeast-1.amazonaws.com/convert', {
-                method: 'POST',
-                mode: 'no-cors',
-                headers: {
-                    'APIKEY': '3db2614196984c1b84d78a608808cb28'
-                },
-                body: formData
-            })
-                .then(response => response.blob())
-                .then(data => {
-                    const objectURL = URL.createObjectURL(data);
-                    animatedImage.src = objectURL;
-                })
-                .catch(error => {
-                    console.error('Error:', error);
+            const reader = new FileReader();
+            reader.readAsDataURL(file);
+            reader.onloadend = function () {
+                const base64data = reader.result.split(',')[1];
+                const dataToSend = JSON.stringify({
+                    base64Image: base64data
                 });
+
+                fetch('https://lzeeniah1j.execute-api.ap-northeast-1.amazonaws.com/convert', {
+                    method: 'POST',
+                    mode: 'no-cors',
+                    headers: {
+                        'APIKEY': '3db2614196984c1b84d78a608808cb28',
+                        'Content-Type': 'application/json'
+                    },
+                    body: dataToSend
+                })
+                    .then(response => response.blob())
+                    .then(data => {
+                        const objectURL = URL.createObjectURL(data);
+                        animatedImage.src = objectURL;
+                    })
+                    .catch(error => {
+                        console.error('Error:', error);
+                    });
+            }
         }
     </script>
 </body>
