--- a/cattoon/cartoon.html
+++ b/cattoon/cartoon.html
@@ -82,13 +82,20 @@
                     },
                     body: dataToSend
                 })
-                    .then(response => response.blob())
+                    .then(response => {
+                        if (!response.ok) {
+                            // エラーメッセージを取得してエラーをスロー
+                            return response.text().then(text => { throw new Error(text) });
+                        }
+                        return response.json();
+                    })
                     .then(data => {
-                        const objectURL = URL.createObjectURL(data);
-                        animatedImage.src = objectURL;
+                        animatedImage.src = "data:image/png;base64," + data.base64Image;
                     })
                     .catch(error => {
                         console.error('Error:', error);
+                        // エラーメッセージをalertで表示
+                        alert('エラーが発生しました: ' + error.message);
                     });
             }
         }
