--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
         <ul>
             <li>経歴</li>
         </ul>
-        <p>10年にわたるネットワークエンジニアリングのキャリアの中で、最先端のテクノロジーとツールを用いて、ビジネスの成長と効率化をサポートしてきました。私の専門領域には、IaCツールであるTerraformとCloudFormationを使用したインフラの設計と実装、AWSを中心としたクラウドサービスの適用、そして構成管理ツールであるAnsibleとChefを用いた自動化が含まれます。シェルスクリプトとPythonを使用したカスタムスクリプトの作成も得意としており、Dockerを活用したコンテナ環境の構築と管理にも熟練しています。また、Github
-            Actionsを使用したCI/CDパイプラインの実装経験も豊富に持っています。フロントエンドとバックエンドの開発に関しても、PHPとJavaScriptを用いた実装経験があります。これらのスキルを活かし、チームと連携して、効果的かつ効率的なソリューションを提供することを常に目指しています。
+        <p>大学を卒業後、約10年間SIer及び社内SEにて、ネットワークエンジニアとして、NW環境の構築、運用を経験してきました。また、Globalチームと打ち合わせを行って、英語でPJを進めていました。現在は、SRE/Devopsエンジニアです。専門領域には、IaCツールであるTerraformとCloudFormationを使用したインフラの設計と実装、AWSを中心としたクラウドサービスの適用、そして構成管理ツールであるAnsibleとChefを用いた自動化が含まれます。シェルスクリプトとPythonを使用したカスタムスクリプトの作成も得意としており、Dockerを活用したコンテナ環境の構築と管理にも熟練しています。また、Github
+            Actionsを使用したCI/CDパイプラインの実装経験もあります。フロントエンドとバックエンドの開発に関しても、PHPとJavaScriptを用いた実装経験があります。これらのスキルを活かし、チームと連携して、効果的かつ効率的なソリューションを提供することを常に目指しています。
         </p>
     </section>
 
