--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <span class="bar"></span>
             <span class="bar"></span>
         </button>
-        <nav>
+        <nav class="nav-menu">
             <ul>
                 <li><a href="#about">About</a></li>
                 <li><a href="#works">Works</a></li>
