--- a/index.html
+++ b/index.html
@@ -181,15 +181,9 @@
             const navMenu = document.querySelector('.nav-menu');
 
             hamburgerMenuButton.addEventListener('click', function () {
-                if (navMenu.classList.contains('active')) {
-                    navMenu.style.transition = 'right 0.3s ease-out';
-                    hamburgerMenuButton.classList.remove('active');
-                    navMenu.classList.remove('active');
-                } else {
-                    navMenu.style.transition = 'right 0.3s ease-in';
-                    hamburgerMenuButton.classList.add('active');
-                    navMenu.classList.add('active');
-                }
+                navMenu.style.transition = 'right 0.3s ease-out';
+                hamburgerMenuButton.classList.toggle('active');
+                navMenu.classList.toggle('active');
             });
         });
     </script>
