--- a/index.html
+++ b/index.html
@@ -39,10 +39,11 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#works">Works</a></li>
                 <li><a href="#news">News</a></li>
-                <li><a href="#contact">contact</a></li>
+                <li><a href="#contact">Contact</a></li>
                 <li><a href="#technical">このWebページの技術スタック</a></li>
                 <li><a href="/blog/">Bulletin Board</a></li>
                 <li><a href="./sd/stablediffusion.html">Generate Image(Stable Diffusion)</a></li>
+                <li><a href="/alien/">Ask Alien(実装中)</a></li>
                 <li><a href="./cattoon/cartoon.html">Animation Style Conversion(実装中)</a></li>
             </ul>
         </nav>
@@ -126,8 +127,6 @@
             <dd>Generate Image(Stable Diffusion)機能の開発に着手</dd>
             <dt>2023/09/29</dt>
             <dd>Generate Image(Stable Diffusion)機能の実装完了</dd>
-            <dt>2023/10/07</dt>
-            <dd>Animation Style Conversion機能の開発に着手</dd>
         </dl>
     </section>
 
@@ -164,11 +163,11 @@
             </tr>
             <tr>
                 <th>環境／クラウド</th>
-                <td>AWS(VPC, EC2, SES, IAM, API Gateway, Lambda、Cloudwatch、S3)</td>
+                <td>AWS(VPC, EC2, SES, IAM, API Gateway, Lambda、Cloudwatch、S3、VPC Endpoint)</td>
             </tr>
             <tr>
                 <th>ツール／その他</th>
-                <td>CI/CD(Github Actions)、Terraform、Docker、Shell Script</td>
+                <td>CI/CD(Github Actions)、Terraform、Docker、Shell Script、Cloudformation</td>
             </tr>
         </table>
         <img src="system.png" alt="システムの画像">
