--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         </table>
         <img src="system.png" alt="システムの画像">
         <img src="system2.png" alt="システムの画像">
-        <img src="system4.png" alt="システムの画像">
+        <img src="http://18.177.70.187/test.png" alt="システムの画像">
         <img src="system3.png" alt="システムの画像">
     </section>
 
