--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@
             </tr>
         </table>
         <img src="system.png" alt="システムの画像">
+        <img src="test.png" alt="システムの画像">
         <img src="system2.png" alt="システムの画像">
-        <img src="http://18.177.70.187/test.png" alt="システムの画像">
         <img src="system3.png" alt="システムの画像">
     </section>
 
