--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@
         </table>
         <img src="system.png" alt="システムの画像">
         <img src="test.png" alt="システムの画像">
+        <img src="mysql.png" alt="システムの画像">
         <img src="system2.png" alt="システムの画像">
         <img src="system3.png" alt="システムの画像">
     </section>
