--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <li><a href="#technical">このWebページの技術スタック</a></li>
                 <li><a href="/blog/">Bulletin Board</a></li>
                 <li><a href="./sd/stablediffusion.html">Generate Image(Stable Diffusion)</a></li>
-                <li><a href="/alien/">Ask Alien(実装中)</a></li>
+                <li><a href="/alien/">Ask Alien(Chat GPT)</a></li>
                 <li><a href="./cattoon/cartoon.html">Animation Style Conversion(実装中)</a></li>
             </ul>
         </nav>
